--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
   }
 
     /* smaller elements */
-    h1, h2{
+    h1, h2, h3{
       color: #1098ad;
     }
     
@@ -45,12 +45,17 @@
       font-style: italic;
     }
 
-    h2 {
+    h2{
         padding: 0px 20px;
         font-size: 26px;
       }
 
-    /* Styling links */
+    h3{
+        padding: 0px 20px;
+        font-size: 20px;
+      }
+
+/* Styling links */
 a:link {
     color: #1098ad;
     text-decoration: none; /*get rid of the underlines */
@@ -78,222 +83,95 @@ a:link {
         margin-right: 0;
       }
   
-      img {
-        border-radius: 8px;
-        max-width: 80%;
-        height: auto;
-        padding: 15px 20px;
-      }
-
-      html, body, img, figure {
-        max-width: 100%;
-    }
-    button, .btn {
-        -webkit-transition: background-color 250ms cubic-bezier(0.55, 0, 0.1, 1);
-        transition: background-color 250ms cubic-bezier(0.55, 0, 0.1, 1);
-    }
-    .slick-slide img {
-        display: block;
-    }
-    .text-left {
-        text-align: left !important;
-    }
-    .list-inline, .list-unstyled {
-        padding-left: 0;
-        list-style: none;
-    }
-    ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-    }
-    ol, ul {
-        margin-top: 0px;
-        margin-bottom: 10px;
-        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    }
-    .map__section .container {
-        padding-top: 20px;
-        padding-bottom: 30px;
-    }
-    .u-padding-bottom-40 {
-        padding-bottom: 0px;
-        padding-top: 0px;
-    }
-    .map {
-        position: relative;
-        width: 800px;
-        -webkit-transition: all 250ms cubic-bezier(0.55, 0, 0.1, 1);
-        transition: all 250ms cubic-bezier(0.55, 0, 0.1, 1);
-        margin-top: 15px;
-    }
-    .city.place1 {
-        top: 0%;
-        left: 0%;
-    }
-    .popup {
-        background: #F5EFE6;
-        border-radius: 50%;
-        width: 150px;
-        height: 150px;
-        text-align: center;
-        color: #1098ad;
-        padding: 40px 40px 20px;
-        overflow: hidden;
-        -webkit-transform: scale(0);
-        -ms-transform: scale(0);
-        transform: scale(0);
-        -webkit-transform-origin: 12%;
-        -ms-transform-origin: 12%;
-        transform-origin: 12%;
-        opacity: 0;
-        -webkit-transition: all 250ms cubic-bezier(0.55, 0, 0.1, 1);
-        transition: all 250ms cubic-bezier(0.55, 0, 0.1, 1);
-    }
-    .popup > .popup__inner, .popup > .inner {
-        display: table-cell;
-        width: 100%;
-        vertical-align: middle;
-    }
-    .popup__name {
-        font-family: 'Oswald', sans-serif;
-        font-size: 48px;
-        text-transform: uppercase;
-        padding-bottom: 14px;
-        display: block;
-    }
-    .popup__content {
-        font-size: 16px;
-        font-family: 'Helvetica', sans-serif;
-    }
-    .city {
-        position: absolute;
-        width: 234px;
-        height: 234px;
-    }
-    .city__button .close {
-        display: none;
-    }
-    .city.active .city__button .close {
-        display: block;
-    }
-    .city.active .city__button .plus, .city.active .city__button .city__name {
-        display: none;
-    }
-    .plus, .close {
-      max-width: 35%;
-      height: auto;
-    }
-    .city {
-        position: absolute;
-        width: 334px;
-        height: 334px;
-    }
-    .city__button {
-        background: none;
-        border: none;
-        z-index: 30;
-        position: absolute;
-        top: -15px;
-        left: -25px;
-        outline: none;
+  img {
+    border-radius: 8px;
+    max-width: 80%;
+    height: auto;
+    padding: 15px 20px;
     }
 
-    .content {
-        width: 100%;
-        max-width: 537px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .map__section .container .section-header {
-        padding-bottom: 10px;
-    }
-    .content .section-header {
-        margin-top: 0;
-        padding-top: 83px;
-        letter-spacing: 0.35px;
-    }
-    .section-header {
-        font-family: 'Raleway', sans-serif;
-        font-weight: 900;
-        color: #101f1d;
-        font-size: 35px;
-        text-transform: uppercase;
-        text-align: center;
-        padding-top: 45px;
-        letter-spacing: 1.25px;
-        margin-bottom: 5px;
-    }
-    .content .section-header small {
-        margin-bottom: -4px;
-        padding-top: 12px;
-        letter-spacing: 0px;
-    }
-    .section-header small {
-        color: #303030;
-        font-size: 22px;
-        display: block;
-        font-weight: 600;
-        padding-top: 10px;
-        margin-bottom: -12px;
-        text-transform: none;
-    }
-    .city.active {
-      z-index: 30;
-    }
-    .city.active .popup {
-        opacity: 1;
-        display: inline-table;
-        -webkit-transform: scale(1);
-        -ms-transform: scale(1);
-        transform: scale(1);
-      position: relative;
-        z-index: 20;
-    }
-    .btn {
-        font-size: 15px;
-        padding: 22px 46px 18px;
-        line-height: 1;
-        text-transform: uppercase;
-        border: none;
-        border-radius: 0;
-        position: relative;
-        letter-spacing: 0.3px;
-    }
-    
-    @media (min-width: 1299px) {
-      .map__image {
-        max-width: none;
-        width: 800px;
-        margin-top: -3px;
-        position: relative;
-        left: 0px;
-      }
-    }
-    @media only screen and (min-width: 1024px) {
-      .content .btn {
-        margin-top: 55px;
-      }
-      .section-header {
-        padding-top: 77px;
-      }
-      .map__section .container {
-        padding-bottom: 71px;
-      }
-    }
-    @media only screen and (min-width: 768px){
-      .popup__content {
-        position: relative;
-        text-align: center;
-        letter-spacing: 0.15px;
-        line-height: 1.25;
-      }
-      .city__name {
-        font-size: 18px;
-      }
+  .map {
+    width: 800px;
+    margin-top: 15px;
     }
 
-    .city.place1 {
-      top: 53.24%;
-      left: 21.94%;
+  .place1 {
+    font-size: 50px;
+    position: absolute;
+    top: 500px;
+    left: 100px;
   }
+
+  .place2 {
+    font-size: 50px;
+    position: absolute;
+    top: 200px;
+    left: 500px;
+  }
+
+  .place3 {
+    font-size: 50px;
+    position: absolute;
+    top: 560px;
+    left: 120px;
+  }
+
+  a.place1:link, a.place1:visited {
+    color:rgb(214, 146, 10);
+  }
+
+  a.place1:hover {
+    color: rgb(143, 99, 11);
+    font-weight: bold;
+    text-decoration: underline dotted #3C2317
+    d;
+  }
+
+  a.place2:link, a.place2:visited {
+    color:rgb(18, 143, 66);
+  }
+
+  a.place2:hover {
+    color: rgb(9, 66, 31);
+    font-weight: bold;
+    text-decoration: underline dotted #3C2317
+    d;
+  }
+
+  a.place3:link, a.place3:visited {
+    color:rgb(224, 34, 21);
+  }
+
+  a.place3:hover {
+    color: rgb(157, 18, 9);
+    font-weight: bold;
+    text-decoration: underline dotted #3C2317
+    d;
+  }
+
+.wrapper {
+    margin: 0 auto;
+    width: 960px;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 45%;
+}
+
+.row{
+  padding: 0px 20px;
+  text-align: center;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.back{
+  padding: 0px 20px;
+}
